deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: credit-scoring-api
  labels:
    app: credit-scoring-api
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "8000"
spec:
  type: ClusterIP
  selector:
    app: credit-scoring-api
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
